Correct permanent navdrawer `z-index`

--- a/assets/scss/material/_navdrawer.scss
+++ b/assets/scss/material/_navdrawer.scss
@@ -186,17 +186,11 @@
       display: block !important; // stylelint-disable-line declaration-no-important
       right: auto;
       width: $navdrawer-width;
-      z-index: auto;
 
       &.navdrawer-permanent-clipped,
       &.navdrawer-permanent-float {
         top: $toolbar-height;
-        z-index: (map-get($toolbar-elevation-shadow, elevation) - 1);
-      }
-
-      &.navdrawer-permanent-clipped {
-        border-top: $navdrawer-border-width solid $navdrawer-border-color;
-        margin-top: ($navdrawer-border-width * -1);
+        z-index: auto;
       }
 
       &.navdrawer-permanent-float {
